--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <link href="./assets/styles/mediaquery-index.css" rel="stylesheet" type="text/css"/>
 
         <meta property="og:url" content="https://tucatv.github.io/"/>
-        <meta property="og:title" content="Sua TV Completa!"/>
+        <meta property="og:title" content="TUCA TV - Sua TV Completa!"/>
         <meta property="og:site_name" content="TUCA TV"/>
         <meta property="og:description" content="Pacote completo de canais Full HD + filmes, séries, animes, novelas e muito mais."/>
         <meta property="og:image" content="https://1.bp.blogspot.com/-CeocZV234kM/YH_OTSt-i0I/AAAAAAAAEn8/Ds9zR85ugKUvGRjhpp6pDOuo1bTUDtW3gCLcBGAsYHQ/s0/tucatvbanner.png"/>
